<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

    <TextView
        android:id="@+id/appTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:minHeight="48dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <Button
        android:id="@+id/gpioButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="#B5FBA7"
        android:fontFamily="sans-serif"
        android:text="@string/gpio"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <Button
        android:id="@+id/i2cButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="#B5FBA7"
        android:fontFamily="sans-serif"
        android:text="@string/i2c"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <Button
        android:id="@+id/serialButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="#B5FBA7"
        android:fontFamily="sans-serif"
        android:text="@string/serial"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <Button
        android:id="@+id/bluetoothButton"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:background="#B5FBA7"
        android:fontFamily="sans-serif"
        android:text="@string/bluetooth"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.01" />
</LinearLayout>