<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.I2cActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

    <TextView
        android:id="@+id/i2cTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i2c"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <Button
        android:id="@+id/i2cWriteButton"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:background="#B5FBA7"
        android:fontFamily="sans-serif"
        android:text="@string/i2c_write_button"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <Button
        android:id="@+id/i2cReadButton"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:background="#B5FBA7"
        android:fontFamily="sans-serif"
        android:text="@string/i2c_read_button"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <TextView
        android:id="@+id/i2cValueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i2cValue"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textStyle="bold|italic"
        android:typeface="normal" />


    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

</LinearLayout>