<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.GpioActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

    <TextView
        android:id="@+id/gpioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpio"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <Button
        android:id="@+id/whiteLedButton"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:background="#787878"
        android:fontFamily="sans-serif"
        android:text="@string/white_led_button"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <Button
        android:id="@+id/greenLedButton"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:background="#6FFF52"
        android:fontFamily="sans-serif"
        android:text="@string/green_led_button"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <Button
        android:id="@+id/redLedButton"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:background="#FD6666"
        android:fontFamily="sans-serif"
        android:text="@string/red_led_button"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.01" />
</LinearLayout>