<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SerialActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

    <TextView
        android:id="@+id/serialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serial"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <EditText
        android:id="@+id/input1Number"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_number"
        android:inputType="number"
        android:textSize="24sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <EditText
        android:id="@+id/input2Number"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_number"
        android:inputType="number"
        android:textSize="24sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <Button
        android:id="@+id/serialSendButton"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:background="#B5FBA7"
        android:fontFamily="sans-serif"
        android:text="@string/serial_send"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.001" />

    <TextView
        android:id="@+id/serialResultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serialValue"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textStyle="bold|italic"
        android:typeface="normal" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.01" />

</LinearLayout>